--- a/style.css
+++ b/style.css
@@ -320,7 +320,20 @@ footer img {
   font-size: 1.25rem;
 }
 
+.footer-image {
+  padding-top: 50px;
+  padding-bottom: 20px;
+}
 
+
+footer {
+  text-align: center;
+  color: white;
+}
+
+footer a {
+  color:white;
+}
 
 /********************
 **** RESPONSIVE *****
